--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,7 @@
     <string name="name_of_default_theme">Default Theme</string>
     <string name="name_of_my_custom_theme_blue">Blue Theme</string>
     <string name="name_of_my_custom_theme_red">Red Theme</string>
+    <string name="today">Сегодня</string>
+    <string name="yesterday">Вчера</string>
+    <string name="day_before_yesterday">Позавчера</string>
 </resources>
